Reducing nav z-index to avoid modal conflict

--- a/public/styles/partials/_nav.scss
+++ b/public/styles/partials/_nav.scss
@@ -4,7 +4,7 @@ nav.navbar {
     left: 0;
     width: 100%;
     height: $nav-height;
-    z-index: 100000;
+    z-index: 100;
     background-color: $bg-nav;
 
     ul {
